# tfd

./: Cargo.toml  README.md  linker_shim.sh  run-android-simulator.sh  run-ios-simulator.sh
.cargo/: config.toml
.github/workflows/: desktop-build.yml  mobile-build.yml
examples/: test.rs
src/: android.rs  com.tfd.DialogHelper.java  ios.rs  lib.rs  macos.rs  unix.rs  windows.rs
