[package]
name = "tfd"
version = "0.1.0"
edition = "2021"

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48", features = [
    "Foundation",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell_Common", 
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Data_Xml_Dom",
    "UI_Notifications"
]}
