[package]
name = "tfd"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Pure-Rust fork of the tinyfiledialogs C library"

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48", features = [
    "Foundation",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell_Common", 
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Data_Xml_Dom",
    "UI_Notifications"
]}

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6.0"
objc2-foundation = "0.3"
# uikit-sys = "0.0.1"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"